fix: fix navbar gap error

--- a/components/navigation/Navbar/Navbar.module.css
+++ b/components/navigation/Navbar/Navbar.module.css
@@ -12,13 +12,13 @@
   pointer-events: all;
 }
 
-.navRoutesFrame,
 .navSocialsFrame {
   display: flex;
   gap: var(--sm);
 }
 
 .navRoutesFrame {
+  display: flex;
   z-index: 998;
 }
 
